--- a/puzzle.html
+++ b/puzzle.html
@@ -10,9 +10,23 @@
       color: green;
       font-family: Arial, sans-serif;
       text-align: center;
+      margin: 0;
+      padding: 0;
     }
     .hidden {
       display: none;
+    }
+    button {
+      background-color: green;
+      color: black;
+      border: none;
+      padding: 10px 20px;
+      font-size: 16px;
+      cursor: pointer;
+      margin-top: 20px;
+    }
+    button:hover {
+      background-color: darkgreen;
     }
     .puzzle-section {
       margin-top: 50px;
