--- a/index.html
+++ b/index.html
@@ -3,6 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <div id="menu-container"></div>
+<script>
+  // Dynamically load the menu
+  fetch("menu.html")
+    .then((response) => response.text())
+    .then((menu) => {
+      document.getElementById("menu-container").innerHTML = menu;
+    });
+</script>
+
   <title>Quest Coin Challenge</title>
   <style>
     body {
