--- a/menu.html
+++ b/menu.html
@@ -1,9 +1,21 @@
-<nav>
-  <ul>
-    <li><a href="index.html">Home</a></li>
-    <li><a href="puzzle.html">Puzzle</a></li>
-    <li><a href="leaderboard.html">Leaderboard</a></li>
-    <li><a href="about.html">About</a></li>
-  </ul>
-</nav>
- 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>About</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <div id="menu-container"></div>
+
+  <main>
+    <h1>About Quest Coin</h1>
+    <p>
+      Quest Coin is a revolutionary token that combines fun, puzzles, and rewards. 
+      Holders can access exclusive puzzles and compete to win prizes. The more you 
+      hold, the more you unlock!
+    </p>
+  </main>
+</body>
+</html>
