--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <div id="menu-container"></div>
+<div id="menu-container"></div>
 <script>
   // Dynamically load the menu
   fetch("menu.html")
@@ -12,6 +13,7 @@
       document.getElementById("menu-container").innerHTML = menu;
     });
 </script>
+
 
   <title>Quest Coin Challenge</title>
   <style>
