--- a/puzzle-home.html
+++ b/puzzle-home.html
@@ -1,47 +1,24 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Puzzle Home</title>
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-  <div id="menu-container"></div>
+<main id="puzzle-home">
+  <h1>Welcome to the Puzzle Challenge</h1>
+  
+  <div class="puzzle-card">
+    <img src="images/puzzle1.jpg" alt="Codebreaker Puzzle" class="puzzle-image">
+    <h2>Puzzle 1: The Codebreaker</h2>
+    <p>Decipher the code hidden within the blockchain. Are you ready to prove your skills?</p>
+    <button onclick="startPuzzle('puzzle1')">Start Puzzle</button>
+  </div>
 
-  <main>
-    <h1>Puzzle Challenges</h1>
-    <p>Select a puzzle to begin your challenge. Each puzzle comes with its own brief to guide you.</p>
+  <div class="puzzle-card">
+    <img src="images/puzzle2.jpg" alt="Enigma Puzzle" class="puzzle-image">
+    <h2>Puzzle 2: The Enigma</h2>
+    <p>Crack the enigma and unveil the secrets of Quest Coin!</p>
+    <button onclick="startPuzzle('puzzle2')">Start Puzzle</button>
+  </div>
 
-    <section id="puzzle-list">
-      <!-- Puzzle 1 -->
-      <div class="puzzle-card">
-        <h2>Puzzle 1: The Cipher Mystery</h2>
-        <p>Crack the code to reveal the hidden message and unlock the next stage.</p>
-        <button onclick="startPuzzle(1)">Start Puzzle 1</button>
-      </div>
-
-      <!-- Puzzle 2 -->
-      <div class="puzzle-card">
-        <h2>Puzzle 2: Number Sequence</h2>
-        <p>Identify the logic behind the number pattern to progress.</p>
-        <button onclick="startPuzzle(2)">Start Puzzle 2</button>
-      </div>
-
-      <!-- Puzzle 3 -->
-      <div class="puzzle-card">
-        <h2>Puzzle 3: Logic Grid</h2>
-        <p>Use clues to solve this logic grid puzzle and claim your reward.</p>
-        <button onclick="startPuzzle(3)">Start Puzzle 3</button>
-      </div>
-    </section>
-  </main>
-
-  <script>
-    function startPuzzle(puzzleNumber) {
-      // Redirect to the specific puzzle page
-      window.location.href = `puzzle${puzzleNumber}.html`;
-    }
-  </script>
-</body>
-</html>
+  <div class="puzzle-card">
+    <img src="images/puzzle3.jpg" alt="Final Quest Puzzle" class="puzzle-image">
+    <h2>Puzzle 3: The Final Quest</h2>
+    <p>The ultimate test of wit and logic. Are you ready for the final challenge?</p>
+    <button onclick="startPuzzle('puzzle3')">Start Puzzle</button>
+  </div>
+</main>
