--- a/puzzle-home.html
+++ b/puzzle-home.html
@@ -1,4 +1,29 @@
 <main id="puzzle-home">
+    <style>
+    body {
+      background-color: black;
+      color: green;
+      font-family: Arial, sans-serif;
+      text-align: center;
+      margin: 0;
+      padding: 0;
+    }
+    button {
+      background-color: green;
+      color: black;
+      border: none;
+      padding: 10px 20px;
+      font-size: 16px;
+      cursor: pointer;
+      margin-top: 20px;
+    }
+    button:hover {
+      background-color: darkgreen;
+    }
+    #welcome-message {
+      margin-top: 100px;
+    }
+    </style>
   <h1>Welcome to the Puzzle Challenge</h1>
   
   <div class="puzzle-card">
