--- a/puzzle-home.html
+++ b/puzzle-home.html
@@ -4,7 +4,7 @@
       background-color: black;
       color: green;
       font-family: Arial, sans-serif;
-      text-align: center;
+      text-align: left ;
       margin: 0;
       padding: 0;
     }
@@ -28,22 +28,25 @@
   
   <div class="puzzle-card">
     <img src="images/puzzle1.jpg" alt="Codebreaker Puzzle" class="puzzle-image">
-    <h2>Puzzle 1: The Codebreaker</h2>
-    <p>Decipher the code hidden within the blockchain. Are you ready to prove your skills?</p>
+    <h2>Puzzle 1: The Cipher of Shadows</h2>
+    <p>In The Cipher of Shadows, players take on the role of a rogue cryptographer 
+        working to overthrow a shadowy organization called Umbra. They progress through three stages
+        to uncover hidden messages and critical clues. Each stage brings them closer to finding Umbra's central server, 
+        ultimately giving the resistance the power to liberate the world.</p>
     <button onclick="startPuzzle('puzzle1')">Start Puzzle</button>
   </div>
 
   <div class="puzzle-card">
-    <img src="images/puzzle2.jpg" alt="Enigma Puzzle" class="puzzle-image">
-    <h2>Puzzle 2: The Enigma</h2>
-    <p>Crack the enigma and unveil the secrets of Quest Coin!</p>
-    <button onclick="startPuzzle('puzzle2')">Start Puzzle</button>
+   // <img src="images/puzzle2.jpg" alt="Enigma Puzzle" class="puzzle-image">
+    <h2>Puzzle 2: To be released...</h2>
+  //  <p>Crack the enigma and unveil the secrets of Quest Coin!</p>
+ //   <button onclick="startPuzzle('puzzle2')">Start Puzzle</button>
   </div>
 
   <div class="puzzle-card">
-    <img src="images/puzzle3.jpg" alt="Final Quest Puzzle" class="puzzle-image">
-    <h2>Puzzle 3: The Final Quest</h2>
-    <p>The ultimate test of wit and logic. Are you ready for the final challenge?</p>
-    <button onclick="startPuzzle('puzzle3')">Start Puzzle</button>
+   // <img src="images/puzzle3.jpg" alt="Final Quest Puzzle" class="puzzle-image">
+    <h2>Puzzle 3: To be released.   </h2>
+ //   <p>The ultimate test of wit and logic. Are you ready for the final challenge?</p>
+  //  <button onclick="startPuzzle('puzzle3')">Start Puzzle</button>
   </div>
 </main>
