--- a/puzzle-home.html
+++ b/puzzle-home.html
@@ -27,7 +27,7 @@
   <h1>Welcome to the Puzzle Challenge</h1>
   
   <div class="puzzle-card">
-    <img src="images/puzzle1.jpg" alt="Codebreaker Puzzle" class="puzzle-image">
+    <img src="images/Images/76f26971-08bf-414c-a00e-55a7ce08bcb1~2.jpg" alt="Codebreaker Puzzle" class="puzzle-image">
     <h2>Puzzle 1: The Cipher of Shadows</h2>
     <p>In The Cipher of Shadows, players take on the role of a rogue cryptographer 
         working to overthrow a shadowy organization called Umbra. They progress through three stages
