--- a/puzzle-home.html
+++ b/puzzle-home.html
@@ -24,7 +24,7 @@
       margin-top: 100px;
     }
     </style>
-  <h1>Welcome to the Puzzle Challenge</h1>
+  <h1>Welcome to the Quest Coin Challenge. Solve the puzzle, win the reward</h1>
   
   <div class="puzzle-card">
     <img src="Images/76f26971-08bf-414c-a00e-55a7ce08bcb1~2.jpg" alt="cipher shadow" class="puzzle-image">
